fix hero overflow

--- a/css/style.css
+++ b/css/style.css
@@ -599,9 +599,10 @@ ul.chars{
 }
 
 .feature-image {
-    max-height: 300px;
-    width: auto;
-    max-width: 500px;
+    max-height: 16em;
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
 }
 
 .feature-paragraph {
@@ -873,12 +874,8 @@ ul.chars{
 
 .hero__video {
   position: absolute;
-  top: 0;
-  right: -8px;
-  bottom: 0;
-  left: -8px;
   display: block;
-  width: calc(100% + 16px);
+  width: 100%;
   height: 100%;
   object-fit: cover;
   -webkit-filter: blur(8px);
@@ -946,11 +943,4 @@ ul.chars{
     #introVideo {
         max-width: 80%;
     }
-}
-
-code {
-    border: 0.1em solid darkgrey;
-    border-radius: 0.25em;
-    padding: 0.1em;
-    background: black;
 }
